wrap mission with div to fix positioning quirk

--- a/src/css/sections/_mood.scss
+++ b/src/css/sections/_mood.scss
@@ -23,10 +23,15 @@
 		background-position: center;
 		background-size: cover;
 	}
+	.mission-wrap {
+		position: absolute;
+		top: 40%;
+		left: 0;
+		right: 0;
+	}
 	.mission {
 		display: inline-block;
 		position: relative;
-		top: 40%;
 		padding: 18px 0;
 		font-size: 22px;
 		font-style: italic;
